Prevents popovers from extending off screen

--- a/client/stylesheets/eventMap.import.styl
+++ b/client/stylesheets/eventMap.import.styl
@@ -11,3 +11,7 @@
 @media (max-width: 768px)
   .map-wrap
     top mobile-header-height
+@media (max-width: 320px)
+  .leaflet-popup-content,
+  .leaflet-popup-content-wrapper
+    max-width 300px
